tests/sema/fail/v9_fail_str_subscript.ep
# COMPILE_FAIL_CONTAINS: str subscript is removed; use bytes(s)[i]
fun main(): void {
    let s = "Epic"
    let c = s[0]
}
